feat(subscription): monthly token pool + tier rebalance
Tokens are now a pooled monthly budget per subscription instead of a
per-build cap. A build is denied when either the build count cap or the
remaining monthly token pool is exhausted (1k headroom required to start).

Tier values rebalanced for better user value:
  FREE  : 1 build  / 30k tokens   / 1 iteration  / 5 cmds  / 3 evts
  BASIC : 5 builds / 300k tokens  / 3 iterations / 15 cmds / 10 evts
  PRO   : 20 builds / 900k tokens / 5 iterations / 50 cmds / 30 evts / 5 parallel
  TEAM  : 150 builds / 6M tokens  / 10 iterations / 50 cmds / 30 evts / 5 parallel

- V11 migration adds subscriptions.tokens_used_this_period and
  token_budgets.user_id (so consume can credit the right subscription)
- TokenBudgetService.allocateBudget now snapshots remaining monthly pool
  as the per-session ceiling and deducts via SubscriptionService on consume
- SubscriptionService.canBuild gates on both build count and token pool;
  monthly cron renamed to resetUsageCounts and zeroes both counters
- Frontend SubscriptionPage shows .99 prices and labels tokens "/ month"
- DEPLOYMENT.md gains a tier table and updates the reset section

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>